--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
 </head>
 <body class="bg">
   <div class="container card fade">
-    <h1>🎯 Ready to Play?</h1>
-    <p>Enter your name to begin. Questions will appear one by one.</p>
+    <h1>Antes de comenzar...</h1>
+    <p>Escribe tus apellidos y curso</p>
     <form method="POST">
       <input type="text" name="name" placeholder="Your name" required class="input">
-      <button type="submit" class="btn">Start Quiz</button>
+      <button type="submit" class="btn">Adelante?</button>
     </form>
   </div>
 </body>
