--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Leaderboard</title>
+  <title>Bien Hecho</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="bg">
   <div class="container card fade">
-    <h1>🏆 Leaderboard</h1>
-    <p class="yours">Your score, {{ name }}: <b>{{ score }}</b></p>
+    <h1>🏆 Posiciones</h1>
+    <p class="yours">Tu Puntaje, {{ name }}: <b>{{ score }}</b></p>
     <table class="table">
       <tr><th>Name</th><th>Score</th></tr>
       {% for s in scores %}
@@ -19,7 +19,7 @@
       {% endfor %}
     </table>
     <div class="actions">
-      <a class="btn" href="{{ url_for('index') }}">Play Again</a>
+      <a class="btn" href="{{ url_for('index') }}">Te atreves otra vez?</a>
     </div>
   </div>
 </body>
