--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -20,6 +20,8 @@
     </table>
     <div class="actions">
       <a class="btn" href="{{ url_for('index') }}">Te atreves otra vez?</a>
+      <a href="https://amigatoxica-hub.onrender.com" class="btn">O mas bien jugamos otros retos?</a>
+
     </div>
   </div>
 </body>
