--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Start Quiz</title>
+  <title>Antes del Reto</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="bg">
@@ -10,7 +10,7 @@
     <h1>Antes de comenzar...</h1>
     <p>Escribe tus apellidos y curso</p>
     <form method="POST">
-      <input type="text" name="name" placeholder="Your name" required class="input">
+      <input type="text" name="name" placeholder="Tu Nombre" required class="input">
       <button type="submit" class="btn">Adelante?</button>
     </form>
   </div>
